# ocrolus-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
ocrolus/: auth_client.py  client.py  token_provider.py
tests/: test_token_provider.py
